// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error-boundaries > BilingualErrorBoundary > should correctly render the bilingual error boundary when it catches a generic error > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        i18n.getFixedT is not a function
      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        TypeError: i18n.getFixedT is not a function
    at BilingualErrorBoundary (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/error-boundaries.tsx:35:19)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
    at renderRootSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14936:11)
    at performWorkOnRoot (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14462:44)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > BilingualErrorBoundary > should correctly render the bilingual error boundary when it catches an AppError > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        i18n.getFixedT is not a function
      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        TypeError: i18n.getFixedT is not a function
    at BilingualErrorBoundary (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/error-boundaries.tsx:35:19)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
    at renderRootSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14936:11)
    at performWorkOnRoot (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14462:44)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > BilingualNotFound > should correctly render the bilingual 404 when it catches a 404 error > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        i18n.getFixedT is not a function
      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        TypeError: i18n.getFixedT is not a function
    at BilingualNotFound (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/error-boundaries.tsx:177:19)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
    at renderRootSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14936:11)
    at performWorkOnRoot (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14462:44)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualErrorBoundary > should correctly render the unilingual error boundary when it catches a generic error > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        i18n.getFixedT is not a function
      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        TypeError: i18n.getFixedT is not a function
    at Footer (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/footer.tsx:11:19)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
    at renderRootSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14936:11)
    at performWorkOnRoot (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14462:44)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualErrorBoundary > should correctly render the unilingual error boundary when it catches an AppError > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        [vitest] No "Trans" export is defined on the "react-i18next" mock. Did you forget to return it from "vi.mock"?
If you need to partially mock a module, you can use "importOriginal" helper inside:

      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        Error: [vitest] No "Trans" export is defined on the "react-i18next" mock. Did you forget to return it from "vi.mock"?
If you need to partially mock a module, you can use "importOriginal" helper inside:

    at VitestMocker.createError (file:///home/charles-pham/git/canada-disability-benefit/frontend/node_modules/vitest/dist/chunks/execute.B7h3T_Hc.js:284:17)
    at Object.get (file:///home/charles-pham/git/canada-disability-benefit/frontend/node_modules/vitest/dist/chunks/execute.B7h3T_Hc.js:330:16)
    at UnilingualErrorBoundary (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/error-boundaries.tsx:353:18)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;

exports[`error-boundaries > UnilingualNotFound > should correctly render the unilingual 404 when it catches a 404 error > expected html 1 1`] = `
<html>
  <head />
  <body>
    <div>
      <h2>
        Unexpected Application Error!
      </h2>
      <h3
        style="font-style: italic;"
      >
        i18n.getFixedT is not a function
      </h3>
      <pre
        style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
      >
        TypeError: i18n.getFixedT is not a function
    at Footer (/home/charles-pham/git/canada-disability-benefit/frontend/app/components/footer.tsx:11:19)
    at Object.react-stack-bottom-frame (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:23863:20)
    at renderWithHooks (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:5529:22)
    at updateFunctionComponent (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:8897:19)
    at beginWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:10522:18)
    at runWithFiberInDEV (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:1522:13)
    at performUnitOfWork (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:15140:22)
    at workLoopSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14956:41)
    at renderRootSync (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14936:11)
    at performWorkOnRoot (/home/charles-pham/git/canada-disability-benefit/frontend/node_modules/react-dom/cjs/react-dom-client.development.js:14462:44)
      </pre>
      <p>
        💿 Hey developer 👋
      </p>
      <p>
        You can provide a way better UX than this when your app throws errors by providing your own 
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          ErrorBoundary
        </code>
         or
         
        <code
          style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
        >
          errorElement
        </code>
         prop on your route.
      </p>
    </div>
  </body>
</html>
`;
